--- a/style_index.css
+++ b/style_index.css
@@ -1,85 +1,90 @@
 body {
-    background-image: url('bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Arial', sans-serif;
-    color: #fff;
-    text-align: center;
+  background-image: url("bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Arial", sans-serif;
+  color: #fff;
+  text-align: center;
 }
 
 .navbar {
-    background-color: rgba(109, 109, 109, 0.8); /* Ubah ke warna grey dengan opacity 30% */
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding: 10px;
-    position: absolute;
-    top: 80px; /* Ubah ke 50px dari atas */
-    right: 0;
+  background-color: rgba(
+    109,
+    109,
+    109,
+    0.8
+  ); /* Ubah ke warna grey dengan opacity 30% */
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 10px;
+  position: absolute;
+  top: 80px; /* Ubah ke 50px dari atas */
+  right: 0;
 }
 
 .navbar a {
-    color: #f2f2f2;
-    text-decoration: none;
-    padding: 10px;
-    margin: 5px;
-    font-size: 28px;
-    transition: background-color 0.3s, color 0.3s, margin-right 0.3s;
+  color: #f2f2f2;
+  text-decoration: none;
+  padding: 10px;
+  margin: 5px;
+  font-size: 28px;
+  transition: background-color 0.3s, color 0.3s, margin-right 0.3s;
 }
 
 .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-    margin-right: 30px;
+  background-color: #ddd;
+  color: black;
+  margin-right: 30px;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .dropdown:hover .dropdown-content {
-    display: contents;
-    margin-top: 0; /* Adjust as needed */
-    margin-right: 30px; /* Adjust as needed */
+  display: contents;
+  margin-top: 0; /* Adjust as needed */
+  margin-right: 30px; /* Adjust as needed */
 }
 
 .navbar a.active {
-    background-color: #f58436;
-    color: white;
+  background-color: #f58436;
+  color: white;
 }
 
 .welcome-text {
-    position :absolute;
-    top: 100px; /* Jarak dari atas */
-    left: 30px; /* Jarak dari kiri */
-    color: #f58436;
+  position: absolute;
+  top: 100px; /* Jarak dari atas */
+  left: 30px; /* Jarak dari kiri */
+  color: #f58436;
 }
 
 #current-time {
-    position :absolute;
-    top: 150px; /* Jarak dari atas */
-    left: 30px; /* Jarak dari kiri */
-    color: #423f90;;
-    font-size: 18px; /* Ukuran font */
+  position: absolute;
+  top: 150px; /* Jarak dari atas */
+  left: 30px; /* Jarak dari kiri */
+  color: #423f90;
+  font-size: 18px; /* Ukuran font */
 }
 .logo {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 500px; /* Sesuaikan lebar gambar */
-    height: auto; /* Biarkan tinggi otomatis sesuai proporsi */
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 500px; /* Sesuaikan lebar gambar */
+  height: auto; /* Biarkan tinggi otomatis sesuai proporsi */
 }
